feat(comment history): track comment history
- add CommentHistory and ReplyHistory models
- create relationship between models and parent models (comment and replies)
- add controller for updating comment and replies
- add controller for adding replies
- create endpoint for updating comment and replies
- create middleware for validating comment and reply id
- create middleware for authorizing comment or reply updates
- add test files
- document endpoint

[Delivers #159987424]
