# server/controllers/commentController.js
@@ -1,30 +1,47 @@
 import validator from 'validator';
 import models from '../models/index';
+import commentHelpers from '../helpers/commentHelpers';
 
-const { Users, Comments } = models;
+const { escape } = validator;
+const {
+  Comments, Replies, CommentHistory, ReplyHistory
+} = models;
+const { commenter, updater } = commentHelpers;
 
 const commentsController = {
   addComment: (req, res) => {
-    const { articleId } = req.params;
+    const { articleId, commentId } = req.params;
     const { content } = req.body;
     const userId = req.currentUser.id;
 
     const userComment = {
-      content: validator.escape(content.trim()),
-      articleId: validator.escape(articleId),
+      content: escape(content.trim()),
       userId
     };
 
-    Comments
-      .create(userComment)
-      .then(comment => Users.findById(userId, {
-        attributes: ['id', 'username', 'firstname', 'lastname', 'createdAt', 'updatedAt']
-      })
-        .then(user => res.status(201).jsend.success({ user, comment })))
-      .catch(error => res.status(500).jsend.error({
-        message: 'There was a problem processing your request',
-        error
-      }));
+    if (commentId) {
+      userComment.commentId = escape(commentId);
+      return commenter(res, Replies, ReplyHistory, userComment, 'Reply');
+    }
+
+    userComment.articleId = escape(articleId);
+    return commenter(res, Comments, CommentHistory, userComment, 'Comment');
+  },
+  updateComment: (req, res) => {
+    const reqData = {
+      content: escape(req.body.content),
+      commentId: escape(req.params.commentId)
+    };
+
+    return updater(res, Comments, CommentHistory, reqData, 'Comment');
+  },
+  updateReply: (req, res) => {
+    const reqData = {
+      replyId: escape(req.params.replyId),
+      content: escape(req.body.content)
+    };
+
+    return updater(res, Replies, ReplyHistory, reqData, 'Reply');
   }
 };
 
