# server/middleware/usersValidations.js
@@ -103,45 +103,6 @@ const usersValidations = {
         });
     }
     return next();
-  },
-  /**
-   * @description This method helps validates the like object
-   * @param  {object} req The request object
-   * @param  {object} res The response object
-   * @param  {object} next the next middleware
-   * @returns {object} undefined
-   */
-  validateLikeObject: (req, res, next) => {
-    let status = 'success';
-    const messages = [];
-    const numberRegex = /^[0-9]+$/;
-
-    // Check the passed body for required properties
-    const { valid, invalidMessages } = checkProps(req.body, 'id', 'type');
-
-    if (!valid) {
-      return res.status(400)
-        .jsend.fail({
-          messages: invalidMessages
-        });
-    }
-
-    // Validate the email address provided
-    if (!numberRegex.test(req.body.id)) {
-      status = 'fail';
-      messages.push('Invalid id');
-    }
-    // Validate the password provided
-    if ((req.body.type !== 'comment') && (req.body.type !== 'reply')) {
-      status = 'fail';
-      messages.push('Type must be either "comment" or "reply"');
-    }
-
-    if (status === 'fail') {
-      return res.status(400)
-        .jsend.fail({ messages });
-    }
-    return next();
   }
 };
 
